# pan-302-plugin

./: .gitignore  .prettierrc.json  Makefile  README.md  eslint.config.js  go.mod  go.sum
.github/workflows/: proto-check.yml  release.yml
cmd/pan302-plugin/: main.go
docs/: abi-spec.md  api-evolution.md  getting-started.md  host-api-reference.md  ui-development-guide.md
examples/cloudhub-push/: Makefile  cloudhub.go  default-config.json  go.mod  main_test.go  manifest.json
examples/cloudhub-push/ui/: index.css  index.js  manifest.json
examples/strm-go-example/: Makefile  config.schema.json  default-config.json  go.mod  main.go  main_test.go  manifest.json
examples/strm-go-example/ui/: index.css  index.js  manifest.json
examples/strm-rust-example/: Cargo.toml  Makefile  config.schema.json  default-config.json  manifest.json
examples/strm-rust-example/src/: lib.rs
examples/strm-rust-example/ui/: index.css  index.js  manifest.json
pkg/pluginpkg/: dto.go  errors.go  manifest.go  manifest_test.go  package.go  package_test.go
plugins/cloudhub-push/: CHANGELOG.md  Makefile  cloudhub.go  config.schema.json  default-config.json  main.go  main_test.go  manifest.json  media.go  name_template.go
plugins/cloudhub-push/ui/: .gitignore  eslint.config.js  manifest.json  package.json  (+4 more)
sdk/go/: abi.go  abi_event_test.go  api.go  api_config.go  api_driver.go  api_http.go  api_log.go  api_log_test.go  api_media.go  api_strm.go  client.go  deprecated.go  event_router.go  event_router_test.go  hostcall_stub.go  hostcall_wasm.go  sdk.go
sdk/rust/: Cargo.toml  build.rs
(+23 files in other folders)
