[package]
name = "strm-example"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pan302-plugin-sdk = { path = "../../sdk/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
